name:                write-yourself-a-scheme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/llytvynenko/write-yourself-a-scheme
license:             ISC
license-file:        LICENSE
author:              Leonid Lytvynenko
maintainer:          l.lytvynenko@gmail.com
copyright:           2015 Leonid Lytvynenko
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >=4.7 && < 5
                     , parsec    >=3.1
  default-language:    Haskell2010

executable write-yourself-a-scheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5
                     , write-yourself-a-scheme
                     , parsec    >=3.1
  default-language:    Haskell2010

test-suite write-yourself-a-scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base     >=4.7 && <5
                     , write-yourself-a-scheme -any
                     , hspec    ==2.*
                     , parsec    >=3.1
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite style
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base  >=4.7 && <5
                     , hlint ==1.*
                     , parsec    >=3.1
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/llytvynenko/write-yourself-a-scheme
